test/fail_compilation/fail6784.d

struct S
{
    immutable uint i;
    
    void fun()
    {
        enum uint j = i;
    }
}

void main()
{
    
}